# ghostly

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
.cursor/plans/: pkarr_dead_drop_chat_fa81b45b.plan.md
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml  SKILL.md
cli/src/: crypto.rs  lib.rs  main.rs  pkarr.rs  types.rs
docs/: AI-AGENTS.md  ARCHITECTURE.md  CLI.md  INSTALLATION.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs  pkarr_client.rs  types.rs
src/components/: CallOverlay.tsx  EmojiPicker.tsx  GiphyPicker.tsx  Header.tsx  IncomingCallNotification.tsx  LockScreen.tsx  MessageBubble.tsx  MessageInput.tsx  PollCountdown.tsx  QRCode.tsx  Sidebar.tsx  StatusIndicator.tsx  TechPanel.tsx
src/contexts/: I18nContext.tsx  LockScreenContext.tsx  SettingsContext.tsx  ThemeContext.tsx
src/hooks/: useBackgroundPoller.ts  useChat.ts  usePkarr.ts  useWebRTC.ts
src/lib/: crypto.ts  pkarr.ts  settings.ts  storage.ts  types.ts  url.ts  webrtc.ts
src/locales/: ar.json  en.json  es.json  fr.json  it.json  ja.json  pt.json  zh.json
src/pages/: Chat.tsx  Home.tsx  Settings.tsx  Share.tsx
website/: .dockerignore  Dockerfile  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json  screenshot-tool.js
website/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
website/public/: robots.txt  (+1 more)
(+25 files in other folders)
