[package]
name = "ghostly"
version = "0.1.2"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pkarr = "5"
simple-dns = "0.9"
rand = "0.8"
base64 = "0.22"
crypto_secretbox = "0.1"
